Setup match today fragment & api preparation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
         <item>This is AC Milan FC Dingin Brrrr</item>
         <item>This is Arsenal FC zxcvb</item>
     </string-array>
+
+    <string name="title_activity_match_event">MatchEventActivity</string>
+    <string name="title_navigation_today">Prev Match</string>
+    <string name="title_navigation_tomorrow">Next Match</string>
 </resources>
